--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,10 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.chart-container {
+  background-color: #fafafa;
+  margin: 20px;
+  padding: 10px;
+  border: 1px solid;
+}
